WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190558
[Payment Request] PaymentResponse should be a ContextDestructionObserver
https://bugs.webkit.org/show_bug.cgi?id=190558
Summary
[Payment Request] PaymentResponse should be a ContextDestructionObserver
Andy Estes
Reported
2018-10-13 23:10:53 PDT
[Payment Request] PaymentResponse should be a ContextDestructionObserver
Attachments
Patch
(5.17 KB, patch)
2018-10-13 23:14 PDT
,
Andy Estes
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andy Estes
Comment 1
2018-10-13 23:14:45 PDT
Created
attachment 352266
[details]
Patch
EWS Watchlist
Comment 2
2018-10-13 23:16:03 PDT
Attachment 352266
[details]
did not pass style-queue: ERROR: Source/WebCore/Modules/paymentrequest/PaymentResponse.cpp:39: Code inside a namespace should not be indented. [whitespace/indent] [4] Total errors found: 1 in 4 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 3
2018-10-15 12:37:26 PDT
Comment on
attachment 352266
[details]
Patch Clearing flags on attachment: 352266 Committed
r237133
: <
https://trac.webkit.org/changeset/237133
>
WebKit Commit Bot
Comment 4
2018-10-15 12:37:28 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-10-15 12:38:32 PDT
<
rdar://problem/45280768
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug