[Payment Request] PaymentResponse should be a ContextDestructionObserver https://bugs.webkit.org/show_bug.cgi?id=190558

Reviewed by Alex Christensen.

Make PaymentResponse a ContextDestructionObserver so it has a ScriptExecutionContext to
return for its override of EventTarget::scriptExecutionContext(). Do this instead of
downcasting m_request to an ActiveDOMObject to ask for its context.

* Modules/paymentrequest/PaymentRequest.cpp:
(WebCore::PaymentRequest::accept):
* Modules/paymentrequest/PaymentResponse.cpp:
(WebCore::PaymentResponse::PaymentResponse):
(WebCore::PaymentResponse::scriptExecutionContext const): Deleted.
* Modules/paymentrequest/PaymentResponse.h:


Canonical link: https://commits.webkit.org/205507@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237133 268f45cc-cd09-0410-ab3c-d52691b4dbfc